deployment/openshift/manifest/cic.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: cic
spec:
  replicas: 1
  selector:
     router: cic
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 0
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      name: cic
      labels:
         router: cic
    spec:
      serviceAccount: citrix
      containers:
      - name: cic
        image: "quay.io/netscaler/netscaler-k8s-ingress-controller:4.1.17"
        securityContext:
           privileged: true
        args:
        - --default-ssl-certificate
          default/default-cert
        - --feature-node-watch
          true
        imagePullPolicy: IfNotPresent
