deployment/openshift/manifest/cpx_cic_side_car.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-cic
  labels:
    name: cpx-cic
    app: cpx-cic
spec:
  selector:
    matchLabels:
      app: cpx-cic
  replicas: 1
  template:
    metadata:
      name: cpx-cic
      labels:
        app: cpx-cic
      annotations:
    spec:
      serviceAccountName: citrix
      containers:
        - name: cpx
          image: "quay.io/netscaler/netscaler-cpx:14.1-66.59"
          tty: true
          securityContext: 
             privileged: true
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/
              name: cpx-volume
            - mountPath: /cpx/conf
              name: cpx-volume-conf
          imagePullPolicy: IfNotPresent
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/netscaler/netscaler-k8s-ingress-controller:4.1.17"
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
          args:
            - --default-ssl-certificate
              $(POD_NAMESPACE)/default-cert
          imagePullPolicy: Always
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: cpx-volume
          emptyDir: {}
        - name: cpx-volume-conf
          emptyDir: {}
