deployment/openshift/manifest/secured-edge-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: secured-edge-route
spec:
  host: secured-edge-route.openshift.citrix-cic.com
  path: "/"
  to:
    kind: Service
    name: svc-apache-multi-http
  tls:
    termination: edge

    key: |-                      
      ----BEGIN RSA PRIVATE KEY-----
          
          [...]
      
      -----END RSA PRIVATE KEY-----

    certificate: |-              
      -----BEGIN CERTIFICATE-----
          [...]
      -----END CERTIFICATE-----
