deployment/openshift/manifest/secured-reencrypt-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: secured-reencrypt-route
spec:
  host: secured-reencrypt-route.openshift.citrix-cic.com
  path: "/"
  to:
    kind: Service
    name: svc-apache-multi-ssl
  tls:
    termination: reencrypt

    key: |-                      
      -----BEGIN RSA PRIVATE KEY-----
      ***REMOVED***
      
      
      
      
      
      
      
      
      
      
      
      ***REMOVED***
      
      
      
      
      
      
      
      
      
      
      
      
      -----END RSA PRIVATE KEY-----

    certificate: |-              
      -----BEGIN CERTIFICATE-----
      MIIDdzCCAl8CCQDVaVapF+wImzANBgkqhkiG9w0BAQsFADB6MQswCQYDVQQGEwJJ
[...]
      /2S2n+jXqLKR4y/iBGL3emQsDt7HZWD84gcV
      -----END CERTIFICATE-----
    
    destinationCACertificate: |-            
      -----BEGIN CERTIFICATE-----
      MIIDzzCCAregAwIBAgIJAKTlPECyV/pMMA0GCSqGSIb3DQEBCwUAMH4xCzAJBgNV
[...]
      awevTse0/kSJ5z2qQ22OPRtL3Q==
      -----END CERTIFICATE-----
